<resources>
    <string name="app_name">MisContactos</string>
    <string name="nombre">Oscar Betanzos</string>
    <string name="telefono">2224342910</string>
    <string name="email">oscar@gmail.com</string>
    <string name="cont_imgvTelefono">Telefono</string>
    <string name="cont_imgvEmail">Email</string>

    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>
    <string name="plikes">0 Likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
